# entity-component-system

./: CMakeLists.txt  README.md
src/: archetype.h  bitmask.h  bitmask_graph.h  command.h  component.h  component_container.h  component_manager.h  either.h  entity.h  entity_manager.cpp  entity_manager.h  instanceof.h  main.cpp  position_component.h  scene.h
